crates/oxc_css_parser/tests/recoverable/at-rule/color-profile.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: dashed identifier is expected
  ┌─ color-profile.css:1:16
  │
1 │ @color-profile foo { src: url("x.icc"); }
  │                ^^^
